// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item default snapshot 1`] = `
<div
  className="item"
  style={
    Object {
      "height": 40,
    }
  }
>
  <WithStyles(ForwardRef(Checkbox))
    checked={false}
    color="primary"
    disabled={false}
    id={null}
    indeterminate={false}
    type="checkbox"
  />
  <ItemLabel
    label=""
  />
</div>
`;

exports[`Item snapshot with border 1`] = `
<div
  className="item with_border"
  style={
    Object {
      "height": 40,
    }
  }
>
  <WithStyles(ForwardRef(Checkbox))
    checked={false}
    color="primary"
    disabled={false}
    id={null}
    indeterminate={false}
    type="checkbox"
  />
  <ItemLabel
    label=""
  />
</div>
`;

exports[`Item snapshot with checked status 1`] = `
<div
  className="item selected"
  style={
    Object {
      "height": 40,
    }
  }
>
  <WithStyles(ForwardRef(Checkbox))
    checked={true}
    color="primary"
    disabled={false}
    id={null}
    indeterminate={false}
    type="checkbox"
  />
  <ItemLabel
    label=""
  />
</div>
`;

exports[`Item snapshot with disabled 1`] = `
<div
  className="item disabled"
  style={
    Object {
      "height": 40,
    }
  }
>
  <WithStyles(ForwardRef(Checkbox))
    checked={false}
    color="primary"
    disabled={true}
    id={null}
    indeterminate={false}
    type="checkbox"
  />
  <ItemLabel
    label=""
  />
</div>
`;

exports[`Item snapshot with group item 1`] = `
<div
  className="item with_grouping"
  style={
    Object {
      "height": 40,
    }
  }
>
  <ItemLabel
    label="Hi"
  />
</div>
`;

exports[`Item snapshot with height 1`] = `
<div
  className="item"
  style={
    Object {
      "height": 20,
    }
  }
>
  <WithStyles(ForwardRef(Checkbox))
    checked={false}
    color="primary"
    disabled={false}
    id={null}
    indeterminate={false}
    type="checkbox"
  />
  <ItemLabel
    label=""
  />
</div>
`;

exports[`Item snapshot with indeterminate and checked status 1`] = `
<div
  className="item selected"
  style={
    Object {
      "height": 40,
    }
  }
>
  <WithStyles(ForwardRef(Checkbox))
    checked={true}
    color="primary"
    disabled={false}
    id={null}
    indeterminate={true}
    type="checkbox"
  />
  <ItemLabel
    label=""
  />
</div>
`;

exports[`Item snapshot with indeterminate status 1`] = `
<div
  className="item"
  style={
    Object {
      "height": 40,
    }
  }
>
  <WithStyles(ForwardRef(Checkbox))
    checked={false}
    color="primary"
    disabled={false}
    id={null}
    indeterminate={true}
    type="checkbox"
  />
  <ItemLabel
    label=""
  />
</div>
`;

exports[`Item snapshot with item without id 1`] = `
<div
  className="item"
  style={
    Object {
      "height": 40,
    }
  }
>
  <WithStyles(ForwardRef(Checkbox))
    checked={false}
    color="primary"
    disabled={false}
    id={null}
    indeterminate={false}
    type="checkbox"
  />
  <ItemLabel
    label="Hi"
  />
</div>
`;

exports[`Item snapshot with valid item 1`] = `
<div
  className="item"
  style={
    Object {
      "height": 40,
    }
  }
>
  <WithStyles(ForwardRef(Checkbox))
    checked={false}
    color="primary"
    disabled={false}
    id="checkbox-1"
    indeterminate={false}
    type="checkbox"
  />
  <ItemLabel
    label="Hi"
  />
</div>
`;
